Fix adjusted title screen layout showing scrollbars on button focus

--- a/game/styles/styles.css
+++ b/game/styles/styles.css
@@ -251,6 +251,7 @@ button {
 	height: auto;
 	padding: 0;
 	margin-bottom: 1em;
+	overflow: visible;
 }
 #titleScreen .menu button {
 	width: 184px;
